# skyvista

./: .gitignore  CONVENIENCE_EXAMPLES.md  CONVENIENCE_MIGRATION_GUIDE.md  MANIFEST.in  README.md  pixi.toml  pyproject.toml  pytest.ini
assets/: example_interactive.html
docs/: API.ipynb  API.md  API_CLEANUP_PLAN.md  API_guide.ipynb  ROADMAP.md  SCENE_REFACTOR_PLAN.md  pyvista_setup_tips.md
examples/: coordinate_systems_demo.ipynb  example_interactive.html  sean_students_examples.ipynb  sophia_example.ipynb
scratch/: sean_students_examples.ipynb  test_label_contours.ipynb
skyvista/: __init__.py  animation.py  appearance.py  camera.py  convenience.py  core.py  examples.py  geometry.py  grid_utils.py  grids.py  mesh.py  plotter.py  presets.py  pv_to_blender.py  scene.py  trajectories.py  types_sv.py  varspec.py
skyvista/blender/: __init__.py  blender_animation.py  blender_camera.py  blender_config.py  blender_core.py  blender_import.py  blender_render.py  blender_run.py  blender_types.py  pv_to_blender.py  run.py
skyvista/blender/vdb/: __init__.py  npy_to_vdb.py  vdb.py
skyvista/examples/: sean_students_examples.ipynb
skyvista/presets/: __init__.py  colormaps.py  opacity.py
tests/: __init__.py  run_tests.sh  test_blender.py  test_grids.py  test_import.py  test_pvplotting.py  test_skyvista.py
