[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyvista"
version = "0.1.1"
description = "PyVista-based 3D visualization for atmospheric data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Charles Davis", email = "cmdavis4@colostate.edu"}
]
keywords = ["visualization", "pyvista", "atmospheric", "3d", "meteorology", "trajectories"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyvista[all]>=0.38",
    "numpy",
    "xarray",
    "matplotlib",
    "carlee-tools",
    "ipython",
    "tqdm",
    "ipywidgets"
]

[project.optional-dependencies]
blender = [
    "pandas",
    # Note: bpy (Blender as Python module) must be installed separately
    # It's not available via pip/conda and requires Blender installation
]
vdb = [
    "pyopenvdb",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
all = [
    "pandas",
    "pyopenvdb",
]

[project.urls]
Homepage = "https://github.com/cmdavis4/skyvista"
"Bug Tracker" = "https://github.com/cmdavis4/skyvista/issues"
Documentation = "https://github.com/cmdavis4/skyvista#readme"
"Source Code" = "https://github.com/cmdavis4/skyvista"

[tool.setuptools]
packages = ["skyvista", "skyvista.blender", "skyvista.blender.vdb"]

[tool.setuptools.package-data]
skyvista = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
