[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyvista"
version = "1.0.0"
description = "PyVista-based 3D visualization for atmospheric data"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Charles Davis", email = "cmdavis4@colostate.edu"}
]
keywords = ["visualization", "pyvista", "atmospheric", "3d", "meteorology", "trajectories"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyvista[all]>=0.47.1",
    "trame",
    "numpy",
    "xarray",
    "matplotlib",
    "carlee-tools",
    "ipython",
    "tqdm",
    "ipywidgets"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/cmdavis4/skyvista"
"Bug Tracker" = "https://github.com/cmdavis4/skyvista/issues"
Documentation = "https://github.com/cmdavis4/skyvista#readme"
"Source Code" = "https://github.com/cmdavis4/skyvista"

[tool.setuptools]
packages = ["skyvista", "skyvista.presets"]

[tool.setuptools.package-data]
skyvista = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
